--- a/.env.example
+++ b/.env.example
@@ -3,16 +3,10 @@ WECHAT_APPID=your_wechat_app_id_here
 WECHAT_SECRET=your_wechat_app_secret_here
 WECHAT_TOKEN=your_verification_token_here
 
-# Template Message IDs
-# You need to create these templates in WeChat Official Account platform
+# Template Message ID
+# You need to create this template in WeChat Official Account platform
 # Guest confirmation template should have fields: booking ID, name, phone, date
 WECHAT_TEMPLATE_GUEST=your_guest_template_id_here
-# Support notification template should have similar fields
-WECHAT_TEMPLATE_SUPPORT=your_support_template_id_here
-
-# Support Team OpenID
-# The OpenID of the support team member who will receive notifications
-SUPPORT_OPENID=support_team_openid_here
 
 # Server Configuration
 SERVER_URL=https://your-server-domain.com
